--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -106,19 +106,13 @@ Poděkování.
 
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
 \def\Abstrakt{%
-Boj s chladnou zbraní je mechanika přítomná v nějaké podobě v mnoha akčních hrách z první osoby.
-pouze hrstka z nich se však pokouší o realistickou simulaci, jež by hráči dala svobodu jakkoliv se blížící
-té, již manipulace s chladnou zbraní umožňuje v reálném světě.
-Práce implementuje simulátor šermu s jedenapůlručním (dlouhým) mečem v enginu Unity, ve kterém
-figuruje meč jako plně fyzikálně simulovaný objekt, a předkládá schéma ovládání pro klávesnici a myš
-umožňující hráči jemnou kontrolu nad pohybem zbraně. Pro testování hratelnosti implementuje
-jednoduchého AI protivníka, rovněž jsme prozkoumali některé možnosti, které jemná kontrola nad
-mečem otevírá pro fyzikální interakci s herním prostředím.
-Implementace je modulární a může posloužit jako základ pro akční hru s pokročilým bojovým
-systémem nebo pro fyzikální puzzle hru.
+Boj nablízko s chladnou zbraní najdeme v mnoha videohrách, pouze hrstka z nich se však pokouší o realistickou simulaci, jež by hráči dala svobodu jakkoliv se blížící té, již manipulace s chladnou zbraní umožňuje v reálném světě. Očividným těžkým problémem při takových snahách je návrh schématu ovládání pro klasické počítačové periferie. Ještě méně prozkoumanou oblastí je pak zapojení zbraně do fyzikální simulace.
+
+Práce implementuje simulátor šermu s jedenapůlručním mečem v enginu Unity, v němž figuruje meč jako plně fyzikálně simulovaný objekt. Rovněž předkládá schéma ovládání pro klávesnici a myš umožňující hráči jemnou kontrolu nad pohybem zbraně. Pro testování hratelnosti implementuje jednoduchého AI protivníka.
+Implementace je vytvořena s použitím dobrých programátorských praktik a může komukoliv posloužit jako základ pro akční hru s pokročilým bojovým systémem.
 }
 \def\AbstraktEN{%
-Abstract.
+--PLACEHOLDER--
 }
 
 % 3 až 5 klíčových slov (doporučeno), každé uzavřeno ve složených závorkách
