--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -5,14 +5,14 @@ Boj nablízko s chladnou zbraní najdeme v mnoha videohrách. Mezi žánry, kter
 
 Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry videoher prošly složitou evolucí a přirozeně každý žánr je adaptuje osobitým způsobem, aby ladily s jeho dalšími specifiky. I tak je ale překvapivě jednoduché popsat určité vlastnosti, které vykrystalizovaly jako společné jádro, jež většinová část her sdílí.
 
-Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto simplistické rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\cite{DieByTheSword}, \cite{MountAndBlade}, \cite{KCD}) - podrobněji je rozebereme v první kapitole. Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
+Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto prostoduché rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\cite{DieByTheSword}, \cite{MountAndBlade}, \cite{KCD}) - podrobněji je rozebereme v první kapitole. Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
   
-Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání. Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru se třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, zanedbání jakéhokoliv z nich přinese netriviální důsledky. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména ovladače pro VR\footnote{\ac{vr}}), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly (blíže je představíme v kapitole 1). Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
- 
-Jakmile se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad zbraní, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě ne všechny úkony, o které se pokusí, budou mezi těmi, se kterými autor při vytváření hry počítal. Jak zaručíme, že i v takové situaci bude chování hry odpovídat hráčovu očekávání?\footnote{Pomyslete jaké zklamání a pocit zrady musí cítit hráč, který se jen nevinně pokusil podrbat mečem na zádech, načež jeho postava bez varování vystřelila kilometr do oblak a svou smrtí smazala hodinu neuloženého postupu} Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci zbraně. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles, jež na moderním hardwaru nemají problém zpracovávat v reálném čase stovky objektů. Zahrnutím meče do fyzikální simulace si můžeme ušetřit kus práce, který by jinak musel být implementován ručně, a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které již hráči je povědomé z reálného světa, což může být nápomocné k hráčovu rychlému intuitivnímu uchopení systému. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik.\footnote{Příklady po krátkém zamyšlení: odrážení střel, srážení hledí protivníkovy helmy, odpalování předmětů na protivníka, imerzivní tlačítka stisknutelná úderem meče}
+Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání. Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru se třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, zanedbání jakéhokoliv z nich přinese netriviální důsledky. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména ovladače pro VR\footnote{\ac{vr} - viz kapitolu 1.4.1}), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. V dosavadních pokusech herních studií můžeme vidět velmi rozdílné způsoby jak k této výzvě přistupovaly (blíže je představíme v kapitole 1). Každý exceluje v jiných situacích a má jiné očividné nedostatky, z pohledu na ně je zřejmé že tato oblast si vyžaduje další výzkum. 
 
-Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}\footnote{\url{https://cs.wikipedia.org/wiki/Dlouh\%C3\%BD_me\%C4\%8D}}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je šité na míru naší vybrané zbrani. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za vydatné pomoci jeho vestavěného fyzikálního subsystému. Kód bude psán v souladu s dobrými praktikami objektového programování a standarní štábní kulturou enginu Unity (\cite{Unity}), doprovázený podrobnou programátorskou dokumentací a extenzivními testy, aby bylo dalším programátorům umožněno co nejvyšší pohodlí při jeho použítí a rozšiřování. Celý výsledný projekt bude umístěn veřejně pod MIT licencí a zaplní tak prázdný prostor opensource her s jemně ovladatelným bojovým systémem.
+Jakmile by se nám podařilo pro hráče zajistit jemnou a intuitivní kontrolu nad zbraní, vyplyne nám přirozeně druhá výzva - hráč své kontroly bude chtít využívat. A samozřejmě ne všechny úkony, o které se pokusí, budou mezi těmi, se kterými autor při vytváření hry počítal. Jak zaručíme, že i v takové situaci bude chování hry odpovídat hráčovu očekávání?\footnote{Pomyslete jaké zklamání a pocit zrady musí cítit hráč, který se jen nevinně pokusil podrbat mečem na zádech, načež jeho postava bez varování vystřelila kilometr do oblak a svou smrtí smazala hodinu neuloženého postupu} Zajímavou a dosud neprozkoumanou cestou je pokusit se o plnohodnotnou fyzikální simulaci zbraně. Moderní frameworky pro tvorbu her jsou vybaveny velmi univerzálními subsystémy umožňujícími realistickou fyzikální simulaci pohybu a vzájemné interakce těles, jež na moderním hardwaru nemají problém zpracovávat v reálném čase stovky objektů. Zahrnutím meče do fyzikální simulace můžeme ušetřit díl práce, která by jinak musela být implementována ručně, a zajistíme tím konzistentní chování meče za jakýchkoliv okolností. Navíc tak dosáhneme chování, které již hráči je povědomé z reálného světa, což mu může být nápomocné k rychlému intuitivnímu uchopení systému. V neposlední řadě, meč jako fyzikální objekt může fungovat jako mocné rozhraní pro hráčovu interakci s libovolnými dalšími prvky herního světa, jež jsou rovněž fyzikálně simulované, čímž se otevírá úplně nová oblast emergentních herních mechanik.\footnote{Příklady po krátkém zamyšlení: odrážení střel, srážení hledí protivníkovy helmy, odpalování předmětů na protivníka, páčení víka truhlice, imerzivní tlačítka stisknutelná úderem meče}
+
+Cílem této práce je implementovat kostru jednoduché akční hry z pohledu první osoby - zahrnující hráčem ovladatelnou postavu, prostředí po němž se může pohybovat, velmi jednoduchého počítačem ovládaného protivníka, a zbraň. Zbraní, na kterou se zaměříme, bude \textbf{jedenapůlruční meč}\footnote{\url{https://cs.wikipedia.org/wiki/Dlouh\%C3\%BD_me\%C4\%8D}}. Navrhneme schéma ovládání pro klávesnici a myš, které se neshoduje s žádným dosud používaným, a je koncipované specificky pro naší vybranou zbraň. Budeme při tom usilovat o maximální kontrolu a reakceschopnost hráče při zachování základní uživatelské přívětivosti. Implementaci provedeme v komerčně používaném herním enginu Unity za maximálního využití jeho vestavěného fyzikálního subsystému. Kód bude psán v souladu s dobrými praktikami objektového programování a standarní štábní kulturou enginu Unity (\cite{Unity}), doprovázený podrobnou programátorskou dokumentací a extenzivními testy, aby bylo dalším programátorům umožněno co nejvyšší pohodlí při jeho použítí a rozšiřování. Celý výsledný projekt bude umístěn veřejně pod MIT licencí a zaplní tak prázdný prostor opensource her s jemně ovladatelným bojovým systémem.
 
 \section*{Struktura práce}
 
-V kapitole 1 si blíže vysvětlíme pojmy, se kterými budeme pracovat, uvedeme se do problematiky boje s chladnými zbraněmi ve videohrách, nastíníme příklad typického stavu a několik příkladů, ze kterých chceme čerpat inspiraci. Kapitolu 2 věnujeme stručnému úvodu do použitého herního enginu Unity a podrobnějšímu představení jeho fyzikálního subsystému, na němž tato práce do značné míry stojí. Dále budeme pokračovat kapitolou 3 ve které navrhneme schéma ovládání pro náš jedenapůlruční meč. V kapitole 4 popíšeme celkový návrh a implementaci hry a meče, dopodrobna vylíčíme výzvy, které bylo třeba překonat, a řešení která jsme zvolili. Nakonec v kapitole 5 celkově zhodnotíme návrh našeho systému, rozebereme jeho silné a slabé stránky ve srovnání s existujícími hrami a zamyslíme se nad možnými směry pro navazující práce.
+V kapitole 1 si blíže vysvětlíme pojmy, se kterými budeme pracovat, uvedeme se do problematiky boje s chladnými zbraněmi ve videohrách, nastíníme příklad typického stavu a několik příkladů, ze kterých chceme čerpat inspiraci. Kapitolu 2 věnujeme stručnému úvodu do použitého herního enginu Unity a podrobnějšímu představení jeho fyzikálního subsystému, na němž tato práce do značné míry stojí. Dále budeme pokračovat kapitolou 3, ve které navrhneme schéma ovládání pro náš jedenapůlruční meč. V kapitole 4 popíšeme celkový návrh a implementaci hry a meče, dopodrobna vylíčíme výzvy, které bylo třeba překonat, a řešení která jsme zvolili. Nakonec v kapitole 5 celkově zhodnotíme návrh našeho systému, rozebereme jeho silné a slabé stránky ve srovnání s existujícími hrami a zamyslíme se nad možnými směry pro navazující práce.
