--- a/cs/abstrakt.tex
+++ b/cs/abstrakt.tex
@@ -14,6 +14,9 @@
 
 %% Nezapomeňte upravit abstrakt.xmpdata.
 
-Toto je ukázkový abstrakt.
+Boj nablízko s chladnou zbraní najdeme v mnoha videohrách, pouze hrstka z nich se však pokouší o realistickou simulaci, jež by hráči dala svobodu jakkoliv se blížící té, již manipulace s chladnou zbraní umožňuje v reálném světě. Očividným těžkým problémem při takových snahách je návrh schématu ovládání pro klasické počítačové periferie. Ještě méně prozkoumanou oblastí je pak zapojení zbraně do fyzikální simulace.
+
+Práce implementuje simulátor šermu s jedenapůlručním mečem v enginu Unity, v němž figuruje meč jako plně fyzikálně simulovaný objekt. Rovněž předkládá schéma ovládání pro klávesnici a myš umožňující hráči jemnou kontrolu nad pohybem zbraně. Pro testování hratelnosti implementuje jednoduchého AI protivníka.
+Implementace je vytvořena s použitím dobrých programátorských praktik a může komukoliv posloužit jako základ pro akční hru s pokročilým bojovým systémem.
 
 \end{document}
