write part of beginning of chapter 1

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -1,9 +1,9 @@
 \chapter{Úvod do problematiky}
-qfd
+V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě, zkontrastujeme s jeho popkulturní reprezentací, a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět videoher, a problémy, které při tom musí řešit.
 
 
 \section{Boj s mečem v reálném světě}
-e
+Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k usnadnění lovu paviánů \cite{AustralopithecusWeapon}. Výhody které mu to mohlo přinést, jsou zjevné: zatímco jeho kořist mělo útočný dosah omezený tím, kam stačily její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat své zranitelné tělo o poznání menšímu nebezpečí odvety. Pavián se při své zuřivé obraně orientoval na lovcovu zbraň jakožto bezprostřední hrozbu, avšak tu když poškodil, lovec ji jednoduše zahodil a našel si jinou. 
 
 
 
