--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -29,3 +29,12 @@
 }
 
 
+@article{AustralopithecusWeapon,
+  author          = {Eli C. Minkoff},
+  journal         = {Journal of Paleontology},
+  number          = {no. 6},
+  title           = {A fossil baboon from Angola, with a note on Australopithecus},
+  volume          = {46},
+  year            = {1972},
+  url             = {https://www.jstor.org/stable/1302940?seq=1},
+}
