more wip on chapter 1

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -3,7 +3,11 @@ V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - ve
 
 
 \section{Boj s mečem v reálném světě}
-Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k usnadnění lovu paviánů \cite{AustralopithecusWeapon}. Výhody které mu to mohlo přinést, jsou zjevné: zatímco jeho kořist mělo útočný dosah omezený tím, kam stačily její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat své zranitelné tělo o poznání menšímu nebezpečí odvety. Pavián se při své zuřivé obraně orientoval na lovcovu zbraň jakožto bezprostřední hrozbu, avšak tu když poškodil, lovec ji jednoduše zahodil a našel si jinou. 
+Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k usnadnění lovu paviánů \cite{AustralopithecusWeapon}. Výhody které mu to mohlo přinést, jsou zjevné: zatímco jeho kořist mělo útočný dosah omezený tím, kam stačily její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat své zranitelné tělo o poznání menšímu nebezpečí odvety. Pavián se při své zuřivé obraně orientoval na lovcovu zbraň jakožto bezprostřední hrozbu, avšak tu když poškodil, lovec ji jednoduše zahodil a našel si jinou.  
+
+V průběhu svého vývoje lidský rod postupně objevoval další výhody, které z vynálezu zbraně plynou. - ostrý hrot apod - drastičtější zranění než by dokázal jenom sám ručně, zbraně specializované na obranu (-> štít, zbroj), možnost větší koordinace, zmínit taky že objevili střelné zbraně (házení kamenu, luk, vrhací oštěp, prak) a to byla dost revoluce ve způsobu jak se zbraně používají, ale chladná zbraň zůstala stále velmi relevantní (proč?); jak se (také dost zásluhou vynálezu zbraně) člověk dostával na vrchol potravního řetězce, zbraně začaly být cílené víc a víc pro vzájemný boj mezi lidmi než pro boj člověka se zvířetem
+
+Za tisíce let civilizované historie způsob vedení války prošel bouřlivým vývojem, který zde nemá smysl rozebírat. V každém případě, chladné zbraně vždy hrály významnou roli 
 
 
 
