wrote paragraph about weapons in ancient civs

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -2,16 +2,16 @@
 V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě, zkontrastujeme s jeho popkulturní reprezentací, a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět videoher, a problémy, které při tom musí řešit.
 
 
-\section{Boj s mečem v reálném světě}
-Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k usnadnění lovu paviánů \cite{AustralopithecusWeapon}. Výhody které mu to mohlo přinést, jsou zjevné: zatímco jeho kořist mělo útočný dosah omezený tím, kam stačily její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat své zranitelné tělo o poznání menšímu nebezpečí odvety. Pavián se při své zuřivé obraně orientoval na lovcovu zbraň jakožto bezprostřední hrozbu, avšak tu když poškodil, lovec ji jednoduše zahodil a našel si jinou.  
+\section{Chladná zbraň v reálném světě}
+Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k lovu paviánů \cite{AustralopithecusWeapon}. Výhody které mu to mohlo přinést, jsou zjevné: zatímco kořist měla možnosti obrany omezené tím, kam dosáhly její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat vlastní tělo o poznání menšímu nebezpečí odvety.
 
-V průběhu svého vývoje lidský rod postupně objevoval další výhody, které z vynálezu zbraně plynou. - ostrý hrot apod - drastičtější zranění než by dokázal jenom sám ručně, zbraně specializované na obranu (-> štít, zbroj), možnost větší koordinace, zmínit taky že objevili střelné zbraně (házení kamenu, luk, vrhací oštěp, prak) a to byla dost revoluce ve způsobu jak se zbraně používají, ale chladná zbraň zůstala stále velmi relevantní (proč?); jak se (také dost zásluhou vynálezu zbraně) člověk dostával na vrchol potravního řetězce, zbraně začaly být cílené víc a víc pro vzájemný boj mezi lidmi než pro boj člověka se zvířetem
+V průběhu svého vývoje lidský rod zdokonaloval i své zbraně, což přineslo mnoho dalších implikací - ostrý kamenný hrot člověku umožnil zasazovat ránu spolehlivě, a hlubší, než jak by kdy byl schopen pomocí svého těla. Spolehlivost zbraně umožnila lepší koordinaci mezi lovci. Sofistikovaná koordinace člověku otevřela cestu k lovu větších a silnějších druhů zvěře. Nakonec se člověk propracoval na samý vrchol potravního řetězce a zbraň, nástroj lovu, sloužila stále více pro vzájemný boj mezi lidmi. 
 
-Za tisíce let civilizované historie způsob vedení války prošel bouřlivým vývojem, který zde nemá smysl rozebírat. V každém případě, chladné zbraně vždy hrály významnou roli 
+Zrod civilizací vznesl na zbraň nové požadavky. Vysoká koncentrace lidí na jednom místě vedla přirozeně ke specializaci profesí, mezi jinými i vojenské. Profesionální armáda čítající tisíce lidí umožňovala (a vyžadovala) do té doby nevídanou míru koordinace - ideálem v takové situaci se ukázalo disponovat širokou škálou zbraní vysoce specializovaných, chladných i střelných, jež mohly být použity ve vzájemné synergii, doplněné válečnými stroji a vhodně vycvičenými zvířaty\footnote{kůň jak známo hrál přední roli}. Profesionální voják měl čas a motivaci svůj typ zbraně pochopit do hloubky, stejně tak vysoce náročná si mohla dovolit být i její výroba a údržba, za níž nesli zodpovědnost rovněž profesionálové ve svém oboru. 
+Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelnému vojenskému jádru, ale bylo-li město pod útokem, samozřejmě musel být připraven pozvednout zbraň na jeho obranu. Zbraň pro takového člověka vyžadovala především jednoduchost - jak na výrobu, tak na údržbu a použití, zkrátky aby bylo možné v časové tísni krizové situace dostat co nejrychleji co nejvíce odvedenců do bojeschopného stavu a udržet je v něm.
 
 
-
-\section{Typický stav}
+\section{Chladná zbraň ve videohrách}
 hdw
 
 \subsection{Zaklínač 3 - vzorový příklad}
