minor corrections, changed abbreviation identifiers to big letters

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -12,9 +12,9 @@ Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelné
 
 Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve vývoji účinnějších zbraní a metod jejich použití. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její triviální dostupnost v porovnání s palnou zbraní.
 
-Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných preservaci historie a kulturních tradic. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{larp}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, karimatkou měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
+Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných preservaci historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, karimatkou měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
-Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů se dá očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní napodobit činnost, jíž znají z reálného světa, ale bez mnoha nepohodlí, jež by ji v reálném světě provázela.
+Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů se dá očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní napodobit činnost, jíž mají rádi z reálného světa, ale bez mnoha nepohodlí, jež by ji v reálném světě provázela.
 
 
 
