--- a/cs/seznamzkratek.tex
+++ b/cs/seznamzkratek.tex
@@ -1,17 +1,17 @@
-\DeclareAcronym{fps}{
+\DeclareAcronym{FPS}{
     short=FPS,
     long=First Person Shooter - střílečka z pohledu první osoby,
 }
 
-\DeclareAcronym{rpg}{
+\DeclareAcronym{RPG}{
     short=RPG,
     long=Role Playing Game - hra na hrdiny,
 }
-\DeclareAcronym{vr}{
+\DeclareAcronym{VR}{
     short=VR,
     long=Virtuální Realita,
 }
-\DeclareAcronym{larp}{
+\DeclareAcronym{LARP}{
     short=LARP,
     long=Live Action Role Playing,
 }
