--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -14,7 +14,7 @@ Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve
 
 Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných preservaci historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, karimatkou měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
-Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů se dá očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní napodobit činnost, jíž mají rádi z reálného světa, ale bez mnoha nepohodlí, jež by ji v reálném světě provázela.
+Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů se dá očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní napodobit jejich oblíbenou činnost z reálného světa, ale bez mnoha nepohodlí, jež by ji v reálném světě provázela.
 
 
 
